# human-detector-and-tracker

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_coverage_off.sh  build_with_coverage.sh  doxygen.config  install_dependencies.sh  make_and_run.sh  readme.md  run_app.sh
app/: CMakeLists.txt  evaluate.cpp  main.cpp
data/testdata/ground_truth/: crop001504.txt  crop001512.txt
docs/doxygen/html/: annotated.html  classData-members.html  classData.html  classDataReader-members.html  classDataReader.html  classDetector-members.html  classDetector.html  classDetector__inherit__graph.map  classDetector__inherit__graph.md5  classDriver-members.html  classDriver.html  classFrameTransformation-members.html  classFrameTransformation.html  classHumanDetector-members.html  classHumanDetector.html  classHumanDetector__coll__graph.md5  classHumanDetector__inherit__graph.map  classHumanDetector__inherit__graph.md5  classImageReader-members.html  classImageReader.html  classImageReader__coll__graph.md5  classImageReader__inherit__graph.map  classImageReader__inherit__graph.md5  classModel-members.html  classModel.html  classPreProcessor-members.html  classPreProcessor.html  classSVMHumanClassifier-members.html  classSVMHumanClassifier.html  classSVMHumanClassifier__coll__graph.map  classSVMHumanClassifier__coll__graph.md5  classSVMHumanClassifier__inherit__graph.md5  classes.html  data_8cpp.html  data_8cpp__incl.map  data_8cpp__incl.md5  data_8hpp.html  data_8hpp__dep__incl.map  data_8hpp__dep__incl.md5  data_8hpp_source.html  (+114 more)
docs/doxygen/latex/: annotated.tex  classData.tex  classDataReader.tex  classDetector.tex  classDetector__inherit__graph.md5  classDriver.tex  classFrameTransformation.tex  classHumanDetector.tex  classHumanDetector__coll__graph.md5  classHumanDetector__inherit__graph.md5  classImageReader.tex  classImageReader__coll__graph.md5  classImageReader__inherit__graph.md5  classModel.tex  classPreProcessor.tex  classSVMHumanClassifier.tex  data_8cpp.tex  (+61 more)
include/: data.hpp  datareader.hpp  detector.hpp  driver.hpp  frame_transformation.hpp  model.hpp  preprocessor.hpp  types.hpp
include/mock/: mock_datareader.hpp  mock_detector.hpp  mock_frame_transformation.hpp  mock_model.hpp  mock_preprocessor.hpp
results/: cppcheck_process.txt  cppcheck_result.txt  cpplint_result.txt
results/valgrind_results/: cpp-test.txt  evaluate-hd-app.txt  hd-app.txt
src/: CMakeLists.txt  data.cpp  datareader.cpp  detector.cpp  driver.cpp  frame_transformation.cpp  model.cpp  person.cpp  preprocessor.cpp
test/: CMakeLists.txt  main.cpp  test_data.cpp  test_datareader.cpp  test_detector.cpp  test_driver.cpp  test_frame_transformation.cpp  test_model.cpp  test_preprocessor.cpp
(+33 files in other folders)
